<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Telas.Cria">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/titulo"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="data"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/titulo"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="numberDecimal"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/data"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/criar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bnt_criar"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@id/valor"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>