<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Telas.Lista">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/gasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Valor Gasto"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/resto"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/resto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Valor Restante"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/pesquisa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/busca"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gasto"/>

        <Button
            android:id="@+id/busca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bnt_busca"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/pesquisa"/>

        <ListView
            android:id="@+id/lista_itens"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/pesquisa"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/compartilhar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bnt_compar"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/lista_itens"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/finalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bnt_finalizar"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/compartilhar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>