<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Telas.Inicio">
    
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/val_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Valor Total"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/val_gasto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Valor Gasto"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/val_total"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/val_restante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Valor Restante"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/val_gasto"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Button
                android:id="@+id/listaItens"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/bnt_lista"
                android:visibility="gone"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toBottomOf="@id/val_restante"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <Button
                android:id="@+id/gera"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/bnt_gera"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/listaItens"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/historico"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/bnt_hitorico"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/gera"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"  />

            <Button
                android:id="@+id/cria"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/bnt_cria"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/historico"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="gone"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>